Add Article Page

--- a/about-us.html
+++ b/about-us.html
@@ -224,8 +224,8 @@
                 branding takes center stage.
                 <span class="text-[#A7A7A7]"
                   >We approach every branding challenge with strategic
-                  thinking and calculated moves.. precisely..
-                  foresightly..</span
+                  thinking and calculated moves, precisely,
+                  foresightly.</span
                 >
               </div>
               <div
@@ -299,6 +299,26 @@
           <li role="presentation">
             <button
               class="h-auto w-32 aria-selected:text-[#00B0FF] lg:w-44 md:w-36 max-sm:w-auto"
+              id="tactical-tab"
+              data-tabs-target="#tactical"
+              type="button"
+              role="tab"
+              aria-controls="tactical"
+              aria-selected="false"
+            >
+              <i
+                class="relative block h-auto m-auto mb-10 fa-solid fa-bullseye fa-2xl max-md:fa-xl"
+              ></i>
+              <p
+                class="relative pt-4 mb-0 border-t-4 text-md border-inherit lg:text-2xl max-sm:hidden"
+              >
+                Tactical <br />Troop
+              </p>
+            </button>
+          </li>
+          <li role="presentation">
+            <button
+              class="h-auto w-32 aria-selected:text-[#00B0FF] lg:w-44 md:w-36 max-sm:w-auto"
               id="tech-tab"
               data-tabs-target="#tech"
               type="button"
@@ -314,26 +334,6 @@
               >
                 Technologies <br />
                 Troop
-              </p>
-            </button>
-          </li>
-          <li role="presentation">
-            <button
-              class="h-auto w-32 aria-selected:text-[#00B0FF] lg:w-44 md:w-36 max-sm:w-auto"
-              id="tactical-tab"
-              data-tabs-target="#tactical"
-              type="button"
-              role="tab"
-              aria-controls="tactical"
-              aria-selected="false"
-            >
-              <i
-                class="relative block h-auto m-auto mb-10 fa-solid fa-bullseye fa-2xl max-md:fa-xl"
-              ></i>
-              <p
-                class="relative pt-4 mb-0 border-t-4 text-md border-inherit lg:text-2xl max-sm:hidden"
-              >
-                Tactical <br />Troop
               </p>
             </button>
           </li>
