--- a/insight.html
+++ b/insight.html
@@ -275,7 +275,7 @@
                       class="w-full h-[350px] relative bg-[url('/src/assets/images/web.png')] bg-cover bg-center"
                     ></div>
                     <div class="relative">
-                      <a href="#" class="cursor-none">
+                      <a href="/blog-1.html" class="cursor-none">
                         <h3
                           class="text-[40px] leading-[1.25] mb-5 font-semibold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] font-outfit"
                         >
@@ -329,7 +329,7 @@
                       <h3
                         class="h-12 text-2xl font-semibold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] font-outfit"
                       >
-                        <a href="#">
+                        <a href="/blog-1.html">
                           <span class="absolute inset-0"></span>
                           Digital Marketing
                         </a>
@@ -373,7 +373,7 @@
                       <h3
                         class="h-12 text-2xl font-semibold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] font-outfit"
                       >
-                        <a href="#">
+                        <a href="/blog-1.html">
                           <span class="absolute inset-0"></span>
                           Interactive Website
                         </a>
@@ -417,7 +417,7 @@
                       <h3
                         class="h-12 text-2xl font-semibold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] font-outfit"
                       >
-                        <a href="#">
+                        <a href="/blog-1.html">
                           <span class="absolute inset-0"></span>
                           High Value Product
                         </a>
@@ -461,7 +461,7 @@
                       <h3
                         class="h-12 text-2xl font-semibold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] font-outfit"
                       >
-                        <a href="#">
+                        <a href="/blog-1.html">
                           <span class="absolute inset-0"></span>
                           Design Reference
                         </a>
@@ -509,7 +509,7 @@
                       class="w-full h-[350px] relative bg-[url('/src/assets/images/design.png')] bg-cover bg-center"
                     ></div>
                     <div class="relative">
-                      <a href="#" class="cursor-none">
+                      <a href="/blog-1.html" class="cursor-none">
                         <h3
                           class="text-[40px] leading-[1.25] mb-5 font-semibold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] font-outfit"
                         >
@@ -562,7 +562,7 @@
                       <h3
                         class="h-12 text-2xl font-semibold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] font-outfit"
                       >
-                        <a href="#">
+                        <a href="/blog-1.html">
                           <span class="absolute inset-0"></span>
                           Design Reference
                         </a>
@@ -610,7 +610,7 @@
                       class="w-full h-[350px] relative bg-[url('/src/assets/images/product.jpeg')] bg-cover bg-center"
                     ></div>
                     <div class="relative">
-                      <a href="#" class="cursor-none">
+                      <a href="/blog-1.html" class="cursor-none">
                         <h3
                           class="text-[40px] leading-[1.25] mb-5 font-semibold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] font-outfit"
                         >
@@ -663,7 +663,7 @@
                       <h3
                         class="h-12 text-2xl font-semibold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] font-outfit"
                       >
-                        <a href="#">
+                        <a href="/blog-1.html">
                           <span class="absolute inset-0"></span>
                           High Value Products
                         </a>
@@ -711,7 +711,7 @@
                       class="w-full h-[350px] relative bg-[url('/src/assets/images/web.png')] bg-cover bg-center"
                     ></div>
                     <div class="relative">
-                      <a href="#" class="cursor-none">
+                      <a href="/blog-1.html" class="cursor-none">
                         <h3
                           class="text-[40px] leading-[1.25] mb-5 font-semibold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] font-outfit"
                         >
@@ -764,7 +764,7 @@
                       <h3
                         class="h-12 text-2xl font-semibold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] font-outfit"
                       >
-                        <a href="#">
+                        <a href="/blog-1.html">
                           <span class="absolute inset-0"></span>
                           Interactive Website
                         </a>
@@ -812,7 +812,7 @@
                       class="w-full h-[350px] relative bg-[url('/src/assets/images/dm.png')] bg-cover bg-center"
                     ></div>
                     <div class="relative">
-                      <a href="#" class="cursor-none">
+                      <a href="/blog-1.html" class="cursor-none">
                         <h3
                           class="text-[40px] leading-[1.25] mb-5 font-semibold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] font-outfit"
                         >
@@ -865,7 +865,7 @@
                       <h3
                         class="h-12 text-2xl font-semibold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] font-outfit"
                       >
-                        <a href="#">
+                        <a href="/blog-1.html">
                           <span class="absolute inset-0"></span>
                           Digital Marketing
                         </a>
