--- a/career.html
+++ b/career.html
@@ -61,7 +61,7 @@
     </div>
     <div
       id="cursor2"
-      class=" hidden xl:block fixed w-[20px] h-[20px] border-none translate-x-[0%] translate-y-[0%] duration-300 ease-out bg-transparent z-50 pointer-events-none"
+      class="hidden xl:block fixed w-[20px] h-[20px] border-none translate-x-[0%] translate-y-[0%] duration-300 ease-out bg-transparent z-50 pointer-events-none"
     >
       <img
         src="/src/assets/icons/cursor2.svg"
@@ -171,7 +171,7 @@
         class="absolute w-[250px] h-[250px] xl:w-[300px] 2xl:w-[300px] 2xl:h-[300px] xl:h-[300px] bg-[#00B0FF] z-[-1] top-[60%] sm:top-[60%] right-[10%] -translate-y-[50%] rounded-full blur-[96px] opacity-[1] animate-pulse2"
       ></div>
     </div>
-  
+
     <!-- Content -->
     <section class="w-full min-h-[50vh] md:min-h-[90vh]">
       <div
@@ -181,7 +181,7 @@
           class="mb-16 w-full mx-auto lg:max-w-[1150px] 2xl:max-w-[1366px] relative flex flex-col px-5 2xl:px-0 text-center"
         >
           <h1
-            class="hero-item font-inter font-medium text-white text-[22px] sm:text-[68px] xl:text-[64px] 2xl:text-[82px] leading-[1.2] drop-shadow-lg mb-[-10px] xl:mb-[-50px] mt-[-82px] xl:mt-[-72px]"
+            class="hero-item font-inter font-medium text-white text-[22px] sm:text-[68px] xl:text-[64px] 2xl:text-[82px] leading-[1.2] drop-shadow-lg mb-[-10px] xl:mb-[-50px] mt-[56px] xl:mt-[-72px]"
           >
             Be Our
           </h1>
@@ -192,48 +192,65 @@
           </h1>
         </div>
         <div
-            class="w-full mx-auto flex justify-center lg:max-w-[1150px] 2xl:max-w-[900px] px-5 xl:px-0 hero-item"
-          >
-            <div class="w-full xl:w-[75%]">
-              <p
-                class="text-center font-inter font-normal text-[#CECECE] text-[20px] xl:text-[22px] 2xl:text-[24px] opacity-[0.7]"
-              >
-              We're thrilled to learn more about you, 
-              if you're excited about joining our troop, 
-              we'd love to see your resume <br>
+          class="w-full mx-auto flex justify-center lg:max-w-[1150px] 2xl:max-w-[900px] px-5 xl:px-0 hero-item"
+        >
+          <div class="w-full xl:w-[75%]">
+            <p
+              class="text-center font-inter font-normal text-[#CECECE] text-[20px] xl:text-[22px] 2xl:text-[24px] opacity-[0.7]"
+            >
+              We're thrilled to learn more about you, if you're
+              excited about joining our troop, we'd love to see your
+              resume <br />
 
-              <span class="text-[#00B0FF]">Send us your resume at team@gambitrojo.com</span>
-              
-              </p>
-            </div>
+              <span class="text-[#00B0FF]"
+                >Send us your resume at team@gambitrojo.com</span
+              >
+            </p>
           </div>
+        </div>
       </div>
     </section>
 
-    <div class="w-8/12 mx-auto mt-8 mb-56 text-center max-md:w-11/12">
+    <div
+      class="w-full mx-auto xl:max-w-[1080px] mt-8 mb-56 text-center px-5 2xl:px-0"
+    >
       <div
-        class="p-8 bg-[#1C1D20] shadow-lg shadow-[#00B0FF] text-white fill-[#242424] max-md:p-0 max-md:pb-8"
+        class="px-3 py-8 xl:py-20 bg-[#1C1D20] shadow-lg shadow-[#00B0FF] text-white"
       >
-        <h1 class="max-md:p-4 max-md:mb-4 mb-12 text-6xl max-md:text-3xl font-bold font-outfit text-transparent bg-clip-text bg-gradient-radial from-[#8CDBFF] via-[#00B0FF] to-[#0027AF]">
+        <h1
+          class="max-md:p-4 max-md:mb-4 mb-12 text-6xl max-md:text-3xl font-bold font-outfit text-transparent bg-clip-text bg-gradient-radial from-[#8CDBFF] via-[#00B0FF] to-[#0027AF]"
+        >
           We are really sorry
-        </h1> <br/>
+        </h1>
+        <br />
         <div class="w-9/12 mx-auto max-md:text-left">
-          <p class="mb-10 text-4xl font-thin text-white font-inter max-md:text-xl">
-            <span class="font-semibold">All positions for our troopers are currently filled, </span> 
-            however we value your interest in joining our team
-            and we assure you that we will keep your
-            application on file for future opportunities.  
+          <p
+            class="mb-10 text-4xl font-thin text-white font-inter max-md:text-xl"
+          >
+            <span class="font-semibold"
+              >All positions for our troopers are currently filled,
+            </span>
+            however we value your interest in joining our team and we
+            assure you that we will keep your application on file for
+            future opportunities.
           </p>
-          <p class="text-4xl font-thin text-white font-inter max-md:text-xl">
-            <span class="font-semibold md:hidden">Stay connected with us for updates! </span>
-            <span class="font-semibold max-md:hidden">Stay connected with us for updates! <br></span>
+          <p
+            class="text-4xl font-thin text-white font-inter max-md:text-xl"
+          >
+            <span class="font-semibold md:hidden"
+              >Stay connected with us for updates!
+            </span>
+            <span class="font-semibold max-md:hidden"
+              >Stay connected with us for updates! <br
+            /></span>
             <span class="max-md:hidden">
-              Thank you for your understanding! <br>
-              If you have any further questions, feel free to reach us.
+              Thank you for your understanding! <br />
+              If you have any further questions, feel free to reach
+              us.
             </span>
             <span class="md:hidden">
-              Thank you for your understanding!
-              If you have any further questions, feel free to reach us.
+              Thank you for your understanding! If you have any
+              further questions, feel free to reach us.
             </span>
           </p>
         </div>
@@ -341,7 +358,8 @@
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
           >
-            <span><i class="fa-brands fa-whatsapp"></i></span> +62 812 3456789
+            <span><i class="fa-brands fa-whatsapp"></i></span> +62 812
+            3456789
           </h4>
         </div>
         <div
