--- a/about-you.html
+++ b/about-you.html
@@ -330,7 +330,7 @@
                 <li
                   class="font-inter text-xl font-normal text-white text-[1.1em] sm:text-[35px] xl:text-[18px] 2xl:text-xl mb-1 sm:mb-3 xl:mb-1 2xl:mb-2"
                 >
-                  gambitrojo@gmail.com
+                  team@gambitrojo.com
                 </li>
                 <li
                   class="font-inter text-xl font-normal text-white text-[1.1em] sm:text-[35px] xl:text-[18px] 2xl:text-xl mb-1 sm:mb-3 xl:mb-1 2xl:mb-2"
@@ -355,7 +355,7 @@
                 <li
                   class="flex text-[1em] font-inter font-normal text-white sm:text-[35px] xl:text-[18px] 2xl:text-xl mb-1 sm:mb-3 xl:mb-2 2xl:mb-3"
                 >
-                  <a href="#" class="flex items-center gap-2"
+                  <a href="https://www.instagram.com/gambitrojo/?igshid=MzRlODBiNWFlZA%3D%3D" class="flex items-center gap-2"
                     ><img
                       src="./src/assets/icons/instagram.svg"
                       alt="instagram"
@@ -367,7 +367,7 @@
                 <li
                   class="flex text-[1em] font-inter font-normal text-white sm:text-[35px] xl:text-[18px] 2xl:text-xl mb-1 sm:mb-3 xl:mb-2 2xl:mb-3"
                 >
-                  <a href="#" class="flex items-center gap-2"
+                  <a href="https://www.linkedin.com/company/gambit-rojo-digital/about/" class="flex items-center gap-2"
                     ><img
                       src="./src/assets/icons/linkedin.svg"
                       alt="linkedin"
@@ -479,7 +479,7 @@
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
           >
-            gambitrojo@gmail.com
+            team@gambitrojo.com
           </h4>
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
@@ -497,14 +497,14 @@
             Our Social Media
           </h3>
           <div class="flex items-center gap-10">
-            <a href="#" class="cursor-none">
+            <a href="https://www.instagram.com/gambitrojo/?igshid=MzRlODBiNWFlZA%3D%3D" class="cursor-none">
               <img
                 src="./src/assets/icons/instagram.svg"
                 alt="instagram"
                 class="w-[28px] xl:w-[40px]"
               />
             </a>
-            <a href="#" class="cursor-none">
+            <a href="https://www.linkedin.com/company/gambit-rojo-digital/about/" class="cursor-none">
               <img
                 src="./src/assets/icons/linkedin.svg"
                 alt="linkedin"
