--- a/index.html
+++ b/index.html
@@ -322,11 +322,13 @@
               data-rellax-mobile-speed="3"
               data-rellax-desktop-speed="1"
             >
-              <h3
-                class="font-inter text-white font-medium text-3xl xl:text-4xl transition duration-300 hover:text-[#00B0FF]"
-              >
-                See our services
-              </h3>
+              <a href="/expertise.html">
+                <h3
+                  class="font-inter text-white font-medium text-3xl xl:text-4xl transition duration-300 hover:text-[#00B0FF]"
+                >
+                  See our services
+                </h3>
+              </a>
               <img
                 src="./src/assets/icons/arrow-right.svg"
                 alt="arrow-right"
@@ -658,7 +660,7 @@
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
           >
-            gambitrojo@gmail.com
+            team@gambitrojo.com
           </h4>
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
@@ -676,14 +678,14 @@
             Our Social Media
           </h3>
           <div class="flex items-center gap-10">
-            <a href="#" class="cursor-none">
+            <a href="https://www.instagram.com/gambitrojo/?igshid=MzRlODBiNWFlZA%3D%3D" class="cursor-none">
               <img
                 src="./src/assets/icons/instagram.svg"
                 alt="instagram"
                 class="w-[28px] xl:w-[40px]"
               />
             </a>
-            <a href="#" class="cursor-none">
+            <a href="https://www.linkedin.com/company/gambit-rojo-digital/about/" class="cursor-none">
               <img
                 src="./src/assets/icons/linkedin.svg"
                 alt="linkedin"
