--- a/blog-1.html
+++ b/blog-1.html
@@ -205,12 +205,12 @@
               <span>Nature, Animal</span>
             </div>
             <h1
-              class="my-4 text-2xl xl:text-3xl 2xl:text-5xl font-bold opacity-90 max-md:break-all"
+              class="my-4 text-2xl font-bold xl:text-3xl 2xl:text-5xl opacity-90 max-md:break-all"
             >
               Birds, Birds, Birds!
             </h1>
             <p
-              class="w-1/2 mt-3 leading-7 max-lg:w-full font-normal text-base xl:text-xl"
+              class="w-1/2 mt-3 text-base font-normal leading-7 max-lg:w-full xl:text-xl"
             >
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Vivamus imperdiet ut quam sit amet vehicula.
@@ -519,7 +519,7 @@
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
           >
-            gambitrojo@gmail.com
+            team@gambitrojo.com
           </h4>
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
@@ -537,14 +537,14 @@
             Our Social Media
           </h3>
           <div class="flex items-center gap-10">
-            <a href="#" class="cursor-none">
+            <a href="https://www.instagram.com/gambitrojo/?igshid=MzRlODBiNWFlZA%3D%3D" class="cursor-none">
               <img
                 src="./src/assets/icons/instagram.svg"
                 alt="instagram"
                 class="w-[28px] xl:w-[40px]"
               />
             </a>
-            <a href="#" class="cursor-none">
+            <a href="https://www.linkedin.com/company/gambit-rojo-digital/about/" class="cursor-none">
               <img
                 src="./src/assets/icons/linkedin.svg"
                 alt="linkedin"
