--- a/insight.html
+++ b/insight.html
@@ -1039,7 +1039,7 @@
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
           >
-            gambitrojo@gmail.com
+            team@gambitrojo.com
           </h4>
           <h4
             class="text-lg font-medium text-white font-inter xl:text-xl"
@@ -1056,14 +1056,14 @@
             Our Social Media
           </h3>
           <div class="flex items-center gap-10">
-            <a href="#" class="cursor-none">
+            <a href="https://www.instagram.com/gambitrojo/?igshid=MzRlODBiNWFlZA%3D%3D" class="cursor-none">
               <img
                 src="./src/assets/icons/instagram.svg"
                 alt="instagram"
                 class="w-[28px] xl:w-[40px]"
               />
             </a>
-            <a href="#" class="cursor-none">
+            <a href="https://www.linkedin.com/company/gambit-rojo-digital/about/" class="cursor-none">
               <img
                 src="./src/assets/icons/linkedin.svg"
                 alt="linkedin"
