--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Creating Captivating Narrative with Technology">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="viewport"
