--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Creating Captivating Narrative with Technology">
+    <meta
+      name="description"
+      content="Creating Captivating Narrative with Technology. Here's Gambit Rojo, we are a bunch of innovators and digital marketers enthusiast who gladly handle your brand."
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/src/assets/icons/web-icon.svg"
-    />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -679,14 +678,20 @@
             Our Social Media
           </h3>
           <div class="flex items-center gap-10">
-            <a href="https://www.instagram.com/gambitrojo/?igshid=MzRlODBiNWFlZA%3D%3D" class="cursor-none">
+            <a
+              href="https://www.instagram.com/gambitrojo/?igshid=MzRlODBiNWFlZA%3D%3D"
+              class="cursor-none"
+            >
               <img
                 src="./src/assets/icons/instagram.svg"
                 alt="instagram"
                 class="w-[28px] xl:w-[40px]"
               />
             </a>
-            <a href="https://www.linkedin.com/company/gambit-rojo-digital/about/" class="cursor-none">
+            <a
+              href="https://www.linkedin.com/company/gambit-rojo-digital/about/"
+              class="cursor-none"
+            >
               <img
                 src="./src/assets/icons/linkedin.svg"
                 alt="linkedin"
